--- a/package.json
+++ b/package.json
@@ -9,11 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "dotenv": "^16.3.1",
+    "lucide-react": "^0.264.0",
+    "mongoose": "^7.3.2",
     "next": "13.4.9",
+    "next-auth": "^4.22.4",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2"
+    "react-icons": "^4.10.1",
+    "supports-color": "^8.1.1",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss": "3.3.2",
+    "tailwindcss-animate": "^1.0.6"
   }
 }
